Bug 1061154 Part 2 Change existing Loop strings based on UX feedback

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -129,15 +129,14 @@ video_call_menu_button=Videohovor
 # Conversation Window Strings
 
 begin_call_prompt=Pripravený začať hovor?
-incoming_call_title=Prichádzajúci hovor…
-incoming_call=Prichádzajúci hovor
+incoming_call_title2=Pozvánka na hovor
 incoming_call_accept_button=Prijať
 incoming_call_accept_audio_only_tooltip=Prijať len so zvukom
 incoming_call_cancel_button=Odmietnuť
 incoming_call_cancel_and_block_button=Odmietnuť a zablokovať
 incoming_call_block_button=Zablokovať
 hangup_button_title=Zavesiť
-hangup_button_caption=Ukončiť hovor
+hangup_button_caption2=Ukončiť
 mute_local_audio_button_title=Stlmiť zvuk
 unmute_local_audio_button_title=Zrušiť stlmenie zvuku
 mute_local_video_button_title=Stlmiť video
