Bug 1039987 Add string for notifying the user that the session had expired

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -11,6 +11,11 @@ display_name_dnd_status=Nevyrušovať
 display_name_available_status=Dostupný
 
 unable_retrieve_url=Ospravedlňujeme sa, nebolo možné získať adresu hovoru.
+## LOCALIZATION NOTE(session_expired_error_description): This may be displayed
+## in a rare error instance at the top of the panel here:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+session_expired_error_description=Relácia vypršala. Všetky predtým vytvorené a zdieľané adresy už viac nebudú fungovať.
+
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
