Bug 1047146 - Add current username to the Loop panel footer

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -7,6 +7,7 @@
 share_link_header_text=Ak chcete pozvať priateľa na hovor, poskytnite mu tento odkaz:
 
 # Status text
+display_name_guest=Hosť
 display_name_dnd_status=Nevyrušovať
 display_name_available_status=Dostupný
 
