Bug 1061154 Part 3 Fix some more Loop strings following UX feedback, and add necessary strings for outgoing calls from the desktop client

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -6,6 +6,27 @@
 
 share_link_header_text=Ak chcete pozvať priateľa na hovor, poskytnite mu tento odkaz:
 
+## LOCALIZATION NOTE(invitee_name_label): Displayed when obtaining a url.
+## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Click the label icon at the end of the url field.
+invitee_name_label=Koho pozývate?
+## LOCALIZATION NOTE(invitee_expire_days_label): Allows the user to adjust
+## the expiry time. Click the label icon at the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_days_label=Platnosť pozvánky vyprší o {{expiry_time}} deň;Platnosť pozvánky vyprší o {{expiry_time}} dni;Platnosť pozvánky vyprší o {{expiry_time}} dní
+## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
+## the expiry time. Click the label icon are the end of the url field to see where
+## this is:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#precall-firstrun
+## Semicolon-separated list of plural forms. See:
+## http://developer.mozilla.org/en/docs/Localization_and_Plurals
+## In this item, don't translate the part between {{..}}
+invitee_expire_hours_label=Platnosť pozvánky vyprší o {{expiry_time}} hodinu;Platnosť pozvánky vyprší o {{expiry_time}} hodiny;Platnosť pozvánky vyprší o {{expiry_time}} hodín
+
 # Status text
 display_name_guest=Hosť
 display_name_dnd_status=Nevyrušovať
@@ -134,7 +155,7 @@ video_call_menu_button=Videohovor
 
 # Conversation Window Strings
 
-begin_call_prompt=Pripravený začať hovor?
+initiate_call_button_label2=Pripravený začať hovor?
 incoming_call_title2=Pozvánka na hovor
 incoming_call_accept_button=Prijať
 incoming_call_accept_audio_only_tooltip=Prijať len so zvukom
@@ -148,25 +169,66 @@ unmute_local_audio_button_title=Zrušiť stlmenie zvuku
 mute_local_video_button_title=Stlmiť video
 unmute_local_video_button_title=Zrušiť stlmenie videa
 
+## LOCALIZATION NOTE (call_with_contact_title): The title displayed
+## when calling a contact. Don't translate the part between {{..}} because
+## this will be replaced by the contact's name.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_with_contact_title=Hovor s {{contactName}}
+
+# Outgoing conversation
+
+outgoing_call_title=Začať hovor?
+initiate_audio_video_call_button2=Začať
+initiate_audio_video_call_tooltip2=Začať videohovor
+initiate_audio_call_button2=Hlasový hovor
+initiate_call_cancel_button=Zrušiť
+
+## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
+## whilst the client is contacting the client at the other end of the connection
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_connecting_description=Pripája sa…
+## LOCALIZATION NOTE (call_progress_ringing_description): This is displayed
+## when the other client is actually ringing.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#call-outgoing
+call_progress_ringing_description=Volá sa…
+
 peer_ended_conversation2=Osoba, ktorej ste volali, ukončila hovor.
 conversation_has_ended=Váš hovor bol ukončený.
 restart_call=Znova zavolať
 
+generic_failure_title=Niečo sa pokazilo.
+generic_failure_with_reason2=Môžete to skúsiť znova, prípadne môžete e-mailom odoslať odkaz, pomocou ktorého budete zastihnuteľný neskôr.
+generic_failure_no_reason2=Chcete to skúsiť znova?
+
+## LOCALIZATION NOTE (contact_offline_title): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the contact is offline.
+contact_offline_title=Táto osoba nie je dostupná
+## LOCALIZATION NOTE (call_timeout_notification_text): Title for
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+## displayed when the call didn't go through.
+call_timeout_notification_text=Váš hovor nebol úspešný.
+
+## LOCALIZATION NOTE (retry_call_button, cancel_button, email_link_button):
+## These buttons are displayed when a call has failed:
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#link-prompt
+retry_call_button=Znova
+email_link_button=Odoslať odkaz e-mailom
+cancel_button=Zrušiť
+
 cannot_start_call_session_not_ready=Nie je možné začať hovor, relácia nie je pripravená.
 network_disconnected=Pripojenie k sieti bolo náhle prerušené.
 connection_error_see_console_notification=Hovor zlyhal. Podrobnejšie informácie nájdete v konzole.
-generic_failure_with_reason=Niečo sa pokazilo. Môžete to skúsiť znova, prípadne môžete e-mailom odoslať odkaz, pomocou ktorého budete zastihnuteľný neskôr.
-generic_failure_no_reason=Niečo sa pokazilo. Chcete to skúsiť znova?
-retry=Znova
-report_user=Nahlásiť používateľa
 
-## LOCALIZATION NOTE (legal_text_and_links2): In this item, don't translate the
+## LOCALIZATION NOTE (legal_text_and_links3): In this item, don't translate the
 ## parts between {{..}} because these will be replaced with links with the labels
-## from legal_text_tos and legal_text_privacy.
-legal_text_and_links2=Používaním tohto produktu vyjadrujete súhlas s {{terms_of_use}} \
+## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
+## by the brand name, or fall back to client_shortname_fallback
+legal_text_and_links3=Používaním {{clientShortname}}u vyjadrujete súhlas s {{terms_of_use}} \
  a {{privacy_notice}}.
 legal_text_tos = Podmienkami používania
 legal_text_privacy = Zásadami ochrany súkromia
+client_shortname_fallback=tohto produkt
 
 feedback_call_experience_heading2=Aký bol váš hovor?
 feedback_what_makes_you_sad=Prečo ste smutný?
@@ -184,6 +246,13 @@ feedback_back_button=Naspäť
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
 feedback_window_will_close_in2=Toto okno bude zavreté o {{countdown}} sekundu;Toto okno bude zavreté o {{countdown}} sekundy;Toto okno bude zavreté o {{countdown}} sekúnd
+## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
+## a signed-in to signed-in user call.
+## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
+feedback_rejoin_button=Znova zavolať
+## LOCALIZATION NOTE (feedback_report_user_button): Used to report a user in the case of
+## an abusive user.
+feedback_report_user_button=Nahlásiť používateľa
 
 settings_menu_item_account=Účet
 settings_menu_item_settings=Nastavenia
