Bug 1047164 - Strings - Handle authentication errors for FxA Loop sessions

--- a/sk/browser/chrome/browser/loop/loop.properties
+++ b/sk/browser/chrome/browser/loop/loop.properties
@@ -33,10 +33,19 @@ display_name_dnd_status=Nevyrušovať
 display_name_available_status=Dostupný
 
 unable_retrieve_url=Ospravedlňujeme sa, nebolo možné získať adresu hovoru.
-## LOCALIZATION NOTE(session_expired_error_description): This may be displayed
-## in a rare error instance at the top of the panel here:
+# Error bars
+## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
+## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 session_expired_error_description=Relácia vypršala. Všetky predtým vytvorené a zdieľané adresy už viac nebudú fungovať.
+could_not_authenticate=Overenie nebolo možné
+password_changed_question=Nezmenili ste svoje heslo?
+try_again_later=Skúste to znova neskôr
+could_not_connect=Nebolo možné pripojiť sa k serveru
+check_internet_connection=Skontrolujte pripojenie k sieti internet
+login_expired=Vaše prihlásenie vypršalo
+service_not_available=Služba práve nie je dostupná
+problem_accessing_account=Pri pristupovaní k vášmu účtu nastala chyba
 
 ## LOCALIZATION NOTE(retry_button): Displayed when there is an error to retry
 ## the appropriate action.
