[qa] dom, security, webapprt: typos

--- a/sr/dom/chrome/accessibility/AccessFu.properties
+++ b/sr/dom/chrome/accessibility/AccessFu.properties
@@ -231,7 +231,7 @@ passwordtextAbbr   =       текст лозинке
 radiomenuitemAbbr  =       ставка radio менија
 textcontainerAbbr  =       садржалац текста
 togglebuttonAbbr   =       toggle дугме
-treetableAbbr      =       toggle дугме
+treetableAbbr      =       табела стабла
 headerAbbr         =       заглавље
 footerAbbr         =       подножје
 paragraphAbbr      =       пасус
