--- a/sr/webapprt/webapprt/webapp.properties
+++ b/sr/webapprt/webapprt/webapp.properties
@@ -42,11 +42,11 @@ webapps.install.install=Инстралирај
 webapps.install.dontinstall=Нејмој инсталирати
 # LOCALIZATION NOTE (webapps.uninstall.title): %S will be replaced with the name
 # of the webapp being uninstalled.
-webapps.uninstall.title=Деинстралирај %S
+webapps.uninstall.title=Деинсталирај %S
 # LOCALIZATION NOTE (webapps.uninstall.description): %S will be replaced with the
 # name of the webapp being uninstalled.
 webapps.uninstall.description=Да ли желите да деинсталирате %S?
-webapps.uninstall.uninstall=Деинстралирај
+webapps.uninstall.uninstall=Деинсталирај
 webapps.uninstall.dontuninstall=Нејмој деинсталирати
 
 paymentDialog.title=Плаћање
