Bug 1063105 - Strings for blocking malicious, potentially unwanted, and uncommon downloads

--- a/pl/browser/chrome/browser/downloads/downloads.properties
+++ b/pl/browser/chrome/browser/downloads/downloads.properties
@@ -38,17 +38,23 @@ stateBlockedPolicy=Zablokowane przez politykę stref zabezpieczeń
 # Indicates that the download was blocked after scanning.
 stateDirty=Zablokowane: może zawierać wirusa lub oprogramowanie szpiegujące
 
+blockedMalware=Ten plik zawiera wirusa lub inne złośliwe oprogramowanie
+blockedPotentiallyUnwanted=Ten plik może wyrządzić szkody na komputerze
+blockedUncommon=Otwarcie tego pliku może nie być bezpieczne
+
+unblockHeader=Odblokować ten plik?
+unblockTypeMalware=Ten plik zawiera wirusa lub inne złośliwe oprogramowanie, które może wyrządzić szkody na komputerze.
+unblockTypePotentiallyUnwanted=Ten plik, przedstawiany jako pomocny, wprowadzi nieoczekiwane zmiany w programach i ustawieniach.
+unblockTypeUncommon=Ten plik został pobrany z nieznanej i potencjalnie niebezpiecznej strony - jego otwarcie może nie być bezpieczne.
+unblockTip=Można spróbować pobrać plik z innej lokalizacji lub w późniejszym terminie.
+unblockButtonContinue=Odblokuj mimo to
+unblockButtonCancel=Wybieram bezpieczeństwo
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits=%1$S %2$S
 sizeUnknown=Rozmiar nieznany
 
-# LOCALIZATION NOTE (shortTimeLeftSeconds, shortTimeLeftMinutes,
-# shortTimeLeftHours, shortTimeLeftDays):
-# These values are displayed in the downloads indicator in the main browser
-# window, where space is available for three characters maximum.  %1$S is
-# replaced with the time left for the given measurement unit.  Even for days,
-# the value is never longer than two digits.
 shortTimeLeftSeconds=%1$Ss
 shortTimeLeftMinutes=%1$Sm
 shortTimeLeftHours=%1$Sh
