Bug 1064130 - Improve handling of a11y labels for autocomplete results

--- a/pl/browser/chrome/browser/places/places.properties
+++ b/pl/browser/chrome/browser/places/places.properties
@@ -72,16 +72,9 @@ OrganizerQueryDownloads=Pobrane pliki
 OrganizerQueryAllBookmarks=Wszystkie zakładki
 OrganizerQueryTags=Etykiety
 
-# LOCALIZATION NOTE (tagResultLabel) :
-# This is what we use to form the label (for screen readers)
-# for url bar autocomplete results of type "tag"
-# See createResultLabel() in urlbarBindings.xml 
 tagResultLabel=Etykieta
-# LOCALIZATION NOTE (bookmarkResultLabel) :
-# This is what we use to form the label (for screen readers)
-# for url bar autocomplete results of type "bookmark"
-# See createResultLabel() in urlbarBindings.xml 
 bookmarkResultLabel=Zakładka
+switchtabResultLabel=Karta
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
