Bug 752559 - Console warning when sandboxed iframe is used ineffectively

--- a/pl/dom/chrome/security/security.properties
+++ b/pl/dom/chrome/security/security.properties
@@ -9,3 +9,4 @@ InsecureFormActionPasswordsPresent=Pola haseł obecne w formularzu z niezabezpie
 InsecurePasswordsPresentOnIframe=Pola haseł obecne w niezabezpieczonej (http://) ramce. Stanowi to zagrożenie bezpieczeństwa pozwalające na kradzież danych logowania użytkownika.
 LoadingMixedActiveContent=Wczytywanie mieszanej (niezabezpieczonej) interaktywnej treści na zabezpieczonej stronie „%1$S”
 LoadingMixedDisplayContent=Wczytywanie mieszanej (niezabezpieczonej) prezentacyjnej treści na zabezpieczonej stronie „%1$S”
+BothAllowScriptsAndSameOriginPresent=Ramka posiadająca wartości „allow-scripts” oraz „allow-same-origin” dla atrybutu „sandbox” może usunąć ten atrybut.
