Bug 1058150 - Use restricted profiles for guest mode

--- a/sk/mobile/android/chrome/webapp.properties
+++ b/sk/mobile/android/chrome/webapp.properties
@@ -60,4 +60,4 @@ retrievalFailedTitle=#1 aktualizácia zlyhala;#1 aktualizácie zlyhali;#1 aktual
 # example: Failed to retrieve updates for Foo, Bar, Baz
 retrievalFailedMessage=Nepodarilo sa získať aktualizáciu pre %1$S;Nepodarilo sa získať aktualizácie pre %1$S;Nepodarilo sa získať aktualizácie pre %1$S
 
-webappsDisabledInGuest=Inštalácia aplikácií nie je v režime Hosť povolená
+webappsDisabled=Inštalácia aplikácií nie je povolená
