Bug 1064130 - Improve handling of a11y labels for autocomplete results

--- a/sk/browser/chrome/browser/places/places.properties
+++ b/sk/browser/chrome/browser/places/places.properties
@@ -85,6 +85,11 @@ tagResultLabel=Značka
 # to users with screen readers
 # See createResultLabel() in urlbarBindings.xml
 bookmarkResultLabel=Záložka
+# LOCALIZATION NOTE (switchtabResultLabel) :
+# Noun used to describe the location bar autocomplete result type
+# to users with screen readers
+# See createResultLabel() in urlbarBindings.xml
+switchtabResultLabel=Karta
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
