--- a/sk/browser/chrome/browser/downloads/downloads.properties
+++ b/sk/browser/chrome/browser/downloads/downloads.properties
@@ -38,13 +38,40 @@ stateBlockedPolicy=Blokované na základe nastavenia Bezpečnostných zón
 # Indicates that the download was blocked after scanning.
 stateDirty=Blokované: prevzatý súbor môže obsahovať vírus alebo spyware
 
+# LOCALIZATION NOTE (blockedMalware, blockedPotentiallyUnwanted,
+#                    blockedUncommon):
+# These strings are shown in the panel for some types of blocked downloads, and
+# are immediately followed by the "Learn More" link, thus they must end with a
+# period.  You may need to adjust "downloadDetails.width" in "downloads.dtd" if
+# this turns out to be longer than the other existing status strings.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+blockedMalware=Tento súbor obsahuje vírus alebo škodlivý softvér.
+blockedPotentiallyUnwanted=Tento súbor môže poškodiť váš počítač.
+blockedUncommon=Otvorenie tohto súboru nemusí byť bezpečné.
+
+# LOCALIZATION NOTE (unblockHeader, unblockTypeMalware,
+#                    unblockTypePotentiallyUnwanted, unblockTypeUncommon,
+#                    unblockTip, unblockButtonContinue, unblockButtonCancel):
+# These strings are displayed in the dialog shown when the user asks a blocked
+# download to be unblocked.  The severity of the threat is expressed in
+# descending order by the unblockType strings, it is higher for files detected
+# as malware and lower for uncommon downloads.
+# Note: These strings don't exist in the UI yet.  See bug 1053890.
+unblockHeader=Naozaj chcete odblokovať tento súbor?
+unblockTypeMalware=Tento súbor obsahuje vírus alebo iný škodlivý softvér, ktorý môže poškodiť váš počítač.
+unblockTypePotentiallyUnwanted=Tento súbor, tváriaci sa ako užitočný nástroj, vykoná neočakávané zmeny vo vašich programoch a nastaveniach.
+unblockTypeUncommon=Tento súbor bol prevzatý z neznámej a potenciálne nebezpečnej webovej stránky a jeho otvorenie nemusí byť bezpečné.
+unblockTip=Môžete pohľadať alternatívny zdroj, odkiaľ je súbor možné prevziať alebo súbor skúste prevziať znova neskôr.
+unblockButtonContinue=Aj tak odblokovať
+unblockButtonCancel=Ponechať ma v bezpečí
+
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
 sizeWithUnits=%1$S %2$S
 sizeUnknown=Neznáma veľkosť
 
 # LOCALIZATION NOTE (shortTimeLeftSeconds, shortTimeLeftMinutes,
-# shortTimeLeftHours, shortTimeLeftDays):
+#                    shortTimeLeftHours, shortTimeLeftDays):
 # These values are displayed in the downloads indicator in the main browser
 # window, where space is available for three characters maximum.  %1$S is
 # replaced with the time left for the given measurement unit.  Even for days,
