Bug 1009604 - Show runtime tabs in WebIDE

--- a/sk/browser/chrome/browser/devtools/webide.properties
+++ b/sk/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,10 @@ importHostedApp_header=Zadajte adresu manifestu
 notification_showTroubleShooting_label=Riešenie problémov
 notification_showTroubleShooting_accesskey=R
 
+# LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
+# title for browser tab projects when the tab is still loading.
+project_tab_loading=Načítava sa…
+
 # These messages appear in a notification box when an error occur.
 
 error_cantInstallNotFullyConnected=Projekt nie je možné nainštalovať. Nie je plne pripojené.
